Fix hero text widths and such on mobile

--- a/features/2020/first-amendment/src/partials/_hero.scss
+++ b/features/2020/first-amendment/src/partials/_hero.scss
@@ -41,7 +41,7 @@
     position: relative;
     z-index: 2;
     padding: 60vh 0 40vh;
-    background: linear-gradient( to bottom, rgba(0,0,0,.3), transparent 10%, transparent 30%, rgba(0,0,0,.3) 60%, #000 );
+    background: linear-gradient( to bottom, rgba(0,0,0,.3), transparent 10%, transparent 30%, rgba(0,0,0,.8) 60%, #000 );
 
     &.reveal h1 {
       opacity: 1;
@@ -53,6 +53,8 @@
       font-size: 2rem;
       font-weight: 900;
       color: #000;
+      width: 65%;
+      max-width: 800px;
       text-align: center;
       margin: 0 auto 40vh;
       padding: 1rem;
@@ -69,15 +71,17 @@
 
     position: relative;
     margin: 0 auto;
-    width: 100%;
+    width: 80%;
+    max-width: 500px;
     box-sizing: border-box;
 
     p {
       color: #fff;
-      font-size: 1.5rem;
-      line-height: 2rem;
+      font-size: 1.8rem;
+      line-height: 2.2rem;
       font-family: $type-header;
       margin-bottom: 4rem;
+      text-shadow: 0 .1rem .3rem #000;
     }
 
   }
@@ -94,7 +98,7 @@
       color: $yellow;
       font-size: 2rem;
       line-height: 2rem;
-      width: 90%;
+      width: 80%;
       max-width: 600px;
       margin: 0 auto;
     }
@@ -180,13 +184,18 @@
 
 @media screen and (min-width:500px) {
   .feature-hero {
-    #headline h1 {
-      font-size: 6rem;
+    #headline {
+
+      background: linear-gradient( to bottom, rgba(0,0,0,.3), transparent 10%, transparent 30%, rgba(0,0,0,.3) 60%, #000 );
+
+      h1 {
+        font-size: 5rem;
+        width: 80%;
+      }
+
     }
 
     #deck {
-
-      width: 500px;
 
       p {
         font-size: 2rem;
@@ -202,8 +211,12 @@
   }
 }
 
-@media screen and (min-width:800px) {
+@media screen and (min-width:850px) {
   .feature-hero {
+    #headline h1 {
+      font-size: 6rem;
+      width: initial;
+    }
     #amendment div {
       font-size: 4rem;
       line-height: 4rem;
